--- a/TestingNewArch/Base.lproj/Main.storyboard
+++ b/TestingNewArch/Base.lproj/Main.storyboard
@@ -597,12 +597,23 @@
                                     <constraint firstAttribute="height" constant="33" id="MCI-JA-JON"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="November" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="beR-zQ-tFj">
+                                <rect key="frame" x="-28" y="27.999999999999996" width="68" height="14.333333333333332"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="68" id="IfM-Ma-A7p"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="4VL-BM-Znj" firstAttribute="trailing" secondItem="hTf-Bw-kFA" secondAttribute="trailing" id="0ei-Z6-9z4"/>
                             <constraint firstItem="4VL-BM-Znj" firstAttribute="bottom" secondItem="ygq-Fd-4yv" secondAttribute="bottom" id="47H-JY-T6V"/>
+                            <constraint firstItem="beR-zQ-tFj" firstAttribute="centerY" secondItem="rcD-5g-cpi" secondAttribute="centerY" id="E4R-jG-9MY"/>
                             <constraint firstItem="4VL-BM-Znj" firstAttribute="top" secondItem="rcD-5g-cpi" secondAttribute="bottom" id="GX6-q3-kWI"/>
+                            <constraint firstItem="beR-zQ-tFj" firstAttribute="leading" secondItem="ygq-Fd-4yv" secondAttribute="leading" constant="-28" id="LFk-HP-ZoL"/>
                             <constraint firstItem="rcD-5g-cpi" firstAttribute="top" secondItem="ygq-Fd-4yv" secondAttribute="top" id="U77-W7-IQu"/>
                             <constraint firstItem="4VL-BM-Znj" firstAttribute="leading" secondItem="hTf-Bw-kFA" secondAttribute="leading" id="aLc-TH-3mZ"/>
                             <constraint firstItem="rcD-5g-cpi" firstAttribute="leading" secondItem="hTf-Bw-kFA" secondAttribute="leading" id="pVC-sj-iRY"/>
@@ -612,6 +623,7 @@
                     </view>
                     <connections>
                         <outlet property="calendarCollectionView" destination="rcD-5g-cpi" id="vkF-MU-x4x"/>
+                        <outlet property="monthLabel" destination="beR-zQ-tFj" id="Z4l-ma-nTv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MeA-HB-w0p" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -854,7 +866,22 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="twl-hc-j0m" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-545" y="197"/>
+            <point key="canvasLocation" x="-1785" y="196"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="w51-Ku-P6O">
+            <objects>
+                <viewController id="T8A-z7-5Mo" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Fv7-Z3-DIc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="tV4-VB-lzA"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ajV-Ul-UwP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-823" y="196"/>
         </scene>
         <!--Notes-->
         <scene sceneID="n3V-cj-VkQ">
