--- a/TestingNewArch/Base.lproj/Main.storyboard
+++ b/TestingNewArch/Base.lproj/Main.storyboard
@@ -882,8 +882,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="R85-NQ-aVP">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="638"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="78"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="78" id="xFB-DT-k53"/>
+                                </constraints>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="fSy-dc-uFQ">
                                     <rect key="frame" x="0.0" y="204" width="375" height="44"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -966,7 +969,7 @@
                                         <rect key="frame" x="0.0" y="116" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xMw-lb-eYB" id="syB-B9-uet">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.666666666666664"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44.666666666666664"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="All" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bOx-Dj-85d">
@@ -976,7 +979,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u3W-CX-IwI">
-                                                    <rect key="frame" x="12" y="11" width="20" height="20"/>
+                                                    <rect key="frame" x="12" y="12.333333333333336" width="20" height="20"/>
                                                     <color key="backgroundColor" red="0.60387962740000001" green="0.75892291639999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="20" id="AzP-4B-2Ht"/>
@@ -996,7 +999,7 @@
                                         <rect key="frame" x="0.0" y="160" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="LLJ-bK-Fqb" id="yPJ-na-KKS">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.666666666666664"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44.666666666666664"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Context" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rYY-cW-P4b">
@@ -1014,18 +1017,84 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="nI8-DW-V97">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="672"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="SrW-WL-5bp">
+                                    <size key="itemSize" width="350" height="75"/>
+                                    <size key="headerReferenceSize" width="50" height="10"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ContextCards" id="PV3-D2-8dR" customClass="ContextItemCollectionViewCell" customModule="TestingNewArch" customModuleProvider="target">
+                                        <rect key="frame" x="12.666666666666666" y="10" width="350" height="75"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="350" height="75"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BPH-De-eyc">
+                                                    <rect key="frame" x="0.0" y="0.0" width="350" height="75"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LIC-R6-zTK">
+                                                    <rect key="frame" x="19.333333333333329" y="25" width="48" height="24"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y54-TY-Tnx">
+                                                    <rect key="frame" x="287.33333333333331" y="27" width="42" height="22"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="LIC-R6-zTK" firstAttribute="leading" secondItem="PV3-D2-8dR" secondAttribute="leadingMargin" constant="12" id="FNk-M3-qyb"/>
+                                            <constraint firstItem="LIC-R6-zTK" firstAttribute="centerY" secondItem="PV3-D2-8dR" secondAttribute="centerY" id="Mss-gW-muW"/>
+                                            <constraint firstItem="BPH-De-eyc" firstAttribute="leading" secondItem="PV3-D2-8dR" secondAttribute="leading" id="NqQ-at-pAW"/>
+                                            <constraint firstAttribute="trailing" secondItem="BPH-De-eyc" secondAttribute="trailing" id="Z2t-6V-4MH"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="y54-TY-Tnx" secondAttribute="trailing" constant="12" id="edP-Hw-nEH"/>
+                                            <constraint firstAttribute="bottom" secondItem="BPH-De-eyc" secondAttribute="bottom" id="uBM-ch-Fhv"/>
+                                            <constraint firstItem="BPH-De-eyc" firstAttribute="top" secondItem="PV3-D2-8dR" secondAttribute="top" id="uVD-kk-Z6T"/>
+                                            <constraint firstItem="y54-TY-Tnx" firstAttribute="centerY" secondItem="PV3-D2-8dR" secondAttribute="centerY" id="zOY-72-XLs"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="backView" destination="BPH-De-eyc" id="wTZ-zV-vB2"/>
+                                            <outlet property="contextItemLabel" destination="LIC-R6-zTK" id="2ge-Rt-ESQ"/>
+                                            <outlet property="numberOfContextLabel" destination="y54-TY-Tnx" id="Clc-qa-Clu"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="collectionHeader" id="kxT-es-WEJ">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="10"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </collectionReusableView>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="nI8-DW-V97" firstAttribute="leading" secondItem="tV4-VB-lzA" secondAttribute="leading" id="AQY-YY-gDk"/>
+                            <constraint firstAttribute="bottom" secondItem="nI8-DW-V97" secondAttribute="bottom" id="Hsf-YH-QSi"/>
                             <constraint firstItem="R85-NQ-aVP" firstAttribute="top" secondItem="tV4-VB-lzA" secondAttribute="top" id="TXE-Jd-8cs"/>
                             <constraint firstItem="R85-NQ-aVP" firstAttribute="leading" secondItem="tV4-VB-lzA" secondAttribute="leading" id="XGD-DV-G4L"/>
-                            <constraint firstItem="tV4-VB-lzA" firstAttribute="bottom" secondItem="R85-NQ-aVP" secondAttribute="bottom" id="ZUj-CL-cvn"/>
+                            <constraint firstItem="nI8-DW-V97" firstAttribute="top" secondItem="tV4-VB-lzA" secondAttribute="top" id="hRz-a9-0H9"/>
                             <constraint firstItem="tV4-VB-lzA" firstAttribute="trailing" secondItem="R85-NQ-aVP" secondAttribute="trailing" id="jrg-zA-wTh"/>
+                            <constraint firstItem="tV4-VB-lzA" firstAttribute="trailing" secondItem="nI8-DW-V97" secondAttribute="trailing" id="rXN-Yq-T6F"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="tV4-VB-lzA"/>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="R85-NQ-aVP"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" title="Due Life" id="98d-do-7SG"/>
                     <connections>
+                        <outlet property="contextCollectionView" destination="nI8-DW-V97" id="jGq-mO-esx"/>
                         <outlet property="mainViewTable" destination="R85-NQ-aVP" id="XZQ-8E-BXj"/>
                         <segue destination="BYZ-38-t0r" kind="show" identifier="AllSegue" id="ITC-0s-1Ae"/>
                         <segue destination="4sI-xO-Mlb" kind="show" identifier="ContextItemSegue" id="TUO-JR-MF6"/>
@@ -1033,7 +1102,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ajV-Ul-UwP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-817" y="196"/>
+            <point key="canvasLocation" x="-818.39999999999998" y="195.81280788177341"/>
         </scene>
         <!--Context Item View Controller-->
         <scene sceneID="NRp-20-2i6">
